[package]
name = "obs_tray_hotkey"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "time"] }
tokio-tungstenite = "0.24"
tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
sha2 = "0.10"
anyhow = "1.0"
tray-icon = "0.7.1"
ico = "0.3"
ctrlc = "3.2"

[build-dependencies]
winres = "0.1"

[dependencies.windows]
version = "0.58"
features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus"
]
